Bug 160585 - incorrect free/busy information when creating an event with no time information associated
Summary: incorrect free/busy information when creating an event with no time informati...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-04-08 23:04 UTC by Tobias Eifler
Modified: 2009-03-17 06:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Eifler 2008-04-08 23:04:29 UTC
Version:           3.5.7 (using KDE 3.5.8)
Installed from:    Debian testing/unstable Packages
OS:                Linux

When create an event with 2 days with no time associated, the free/busy information shows only day one as busy. Day 2 is shown as free.
Comment 1 Michael Leupold 2008-09-28 11:24:41 UTC
I can still reproduce this bug in trunk r865573.

Steps to reproduce:
(1) Create a new event
(2) Enter a name for the event
(3) Uncheck the "Time associated" checkbox
(4) Choose start and end to be two separate days
(5) Go to the "Attendees" tab and select the "week" view. Only on day is shown busy.

Generally speaking: If you select the event to last X days, X-1 days will show busy.
Comment 2 Sergio Martins 2009-03-17 06:35:47 UTC
SVN commit 940273 by smartins:

All day events lasting X days were being displayed as X-1.

When creating the event it's displayed right because koeventeditor already addDays(1), the problem was when
editing it again.

BUG: 160585


 M  +8 -1      koeditorfreebusy.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=940273