All day events lasting X days were being displayed as X-1.

When creating the event it's displayed right because koeventeditor already addDays(1), the problem was when
editing it again.

BUG: 160585

svn path=/trunk/KDE/kdepim/; revision=940273